fix height on mobile

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,4 +1,3 @@
-:root {}
 
 body {
     font-family: "Amiri", serif;
@@ -8,7 +7,6 @@ body {
     justify-content: center;
     gap: 20px;
     height: 100vh;
-    height: 100svh;
     background: url(../images/2.jpg) no-repeat scroll center top transparent;
     background-size: auto 100%;
     color: white;
